--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Revue française de photogrammétrie et de Télédétection
+description: RFPT blog on seminars, conferences and other events in the field of photogrammetry and remote sensing
 github_username: rfpt-sfpt
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "education"
@@ -39,11 +39,11 @@ baseurl: "/education" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: rfpt_journal
+    github: rfpt-sfpt
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
